--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -2,6 +2,7 @@
     width: 500px;
     max-width: 100%;
     height: 500px;
+    background-color: #ddd;
     position: relative;
     padding: 0;
     box-sizing: content-box;
@@ -18,7 +19,10 @@
     box-sizing: content-box;
     padding: 0;
     margin: 0;
-    border: 0.5px solid #ddd;
+    border: 0.5px dotted #000;
+}
+#background-canvas{
+    background-color: transparent;
 }
 .loading-box{
     width: 100%;
@@ -132,9 +136,11 @@ ul li {
     margin: 2.5px;
 }
 .propaties-box{
+    margin: 0;
+    padding: 0;
     width: 55px;
     height: 40px;
-    border: 0.5px solid #000;
+    border: 0.5px solid #fff;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -146,14 +152,28 @@ ul li {
     font-size: 8px;
     text-align: center;
     padding: 2px 0;
+    overflow-wrap: break-word;
     background-color: rgba(255,255,255,0.7);
 }
-.sampleText{
-    margin: 4px 0 10px 0;
+#sampleText-wrap{
     font-size: 24px;
+}
+#sampleText{
+    margin: 4px 0 5px 0;
     width: 100%;
     height: auto;
+    max-height: 34px;
     text-align: center;
+    overflow-wrap: break-word;
+    line-height: 1;
+}
+#InsertText{
+    width: 200px;
+    border: 1px double #ddd;
+    margin-left: 25px;
+    padding-left: 30px;
+    height: 30px;
+    margin-bottom: 10px;
 }
 #fontFamily-content ul{
     text-align: center;
@@ -163,7 +183,7 @@ ul li {
     overflow: scroll;
     margin: 0 10px;
     padding: 10px 15px;
-    font-size: 15px;
+    font-size: 12px;
 }
 #fontFamily-content ul li{
     padding: 5px;
