layer setting deploy. but need to be adjusted the layerMoveBtn function.

--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -21,6 +21,9 @@
     margin: 0;
     border: 0.5px dotted #000;
 }
+.selected-item{
+    border: 2px solid #FFffff;
+}
 #background-canvas{
     background-color: transparent;
 }
