--- a/backend/public/css/style copy.css
+++ b/backend/public/css/style copy.css
@@ -1,13 +1,3 @@
-body{
-    margin: 0;
-    padding: 0;
-
-    position: fixed;
-    top: auto;
-    left: 0;
-    right: 0;
-    transform-origin: center top;
-}
 #canvas-wrap{
     width: 500px;
     max-width: 100%;
@@ -16,18 +6,24 @@ body{
     position: relative;
     padding: 0;
     box-sizing: content-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
 .canvas{
     position: absolute;
-    left: 10px;
-    top: 15px;
+    /* left: 0;
+    top: 0; */
     border: 0;
     max-width: 100%;
     box-sizing: content-box;
     padding: 0;
     margin: 0;
     border: 0.5px dotted #000;
+}
+.selected-item{
+    border: 2px solid #FFffff;
 }
 #background-canvas{
     background-color: transparent;
@@ -50,16 +46,13 @@ body{
 *{
     box-sizing: border-box;
 }
-label{
-    cursor: pointer;
-}
 ul{
     padding: 0;
     margin: 0;
 }
 ul li {
     list-style: none;
-    /* max-height: 62px; */
+    max-height: 62px;
 }
 .contentWrapper{
     display: flex;
@@ -76,14 +69,6 @@ ul li {
 }
 .top{
     height: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.top img{
-    width: 140px;
-    height: 60px;
-    cursor: pointer;
 }
 .info{
     position: absolute;
@@ -103,12 +88,12 @@ ul li {
 }
 .b-menu{
     border: 0.5px solid #ddd;
-    width: 25%;
-    max-width: 25%;
+    width: 20%;
+    max-width: 20%;
     height: 100%;
     text-align: center;
 }
-.b-menu:nth-child(n+3){
+.b-menu:nth-child(n+4){
     background: #FFD3BC;
 }
 .b-menu a{
@@ -133,21 +118,18 @@ ul li {
     background-color: #eee; /* わかりやすいよう色付け。後で消す */
 }
 .set-menu-header{
+    font-size: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    background-color: #aaa;
     border:0.3px solid #ddd;
     text-align: center;
-    background-color: rgba(255,235,217, 0.8);
     width: 100%;
     height: 34px;
     line-height: 34px;
-}
-.set-menu-header label{
-    font-size: 1.5em;
-    position: absolute;
-    right: 10px;
-    top: 3px;
+    cursor: pointer;
 }
 .set-menu-header i{
     font-size: 1.3em;
@@ -155,15 +137,14 @@ ul li {
     right: 10px;
 }
 .setting-content{
-    height: 87.2%;
+    height: 50%;
     overflow: scroll;
-    /* border: 0.5px solid #ddd; */
+    border: 0.5px solid #ddd;
 }
 .collapsed{
     display: none;
 }
-.content-container ul,
-#textColor ul{
+.content-container ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -174,10 +155,10 @@ ul li {
 .propaties-box{
     margin: 0;
     padding: 0;
-    width: 100px;
-    height: 100px;
+    width: 55px;
+    height: 40px;
     border: 0.5px solid #fff;
-    border-radius: 50px;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -185,7 +166,7 @@ ul li {
 }
 .propaties{
     width: 100%;
-    font-family: 'Libre Baskerville', serif;
+    font-size: 8px;
     text-align: center;
     padding: 2px 0;
     overflow-wrap: break-word;
@@ -206,6 +187,7 @@ ul li {
 #InsertText{
     width: 200px;
     border: 1px double #ddd;
+    /* margin-left: 25px; */
     padding-left: 30px;
     height: 30px;
     margin-bottom: 10px;
@@ -214,6 +196,7 @@ ul li {
 .fontFamily-content{
     text-align: center;
     display: block;
+    /* border: 1px solid #000; */
     width: 92%;
     overflow: scroll;
     margin: 0 10px;
@@ -224,6 +207,10 @@ ul li {
 .fontFamily-content li{
     padding: 5px;
     cursor: pointer;
+}
+.selected{
+    border: 0.5px solid #aaa;
+    box-shadow: 0 0 0.375em rgba(0, 0, 0, 0.5);
 }
 .propaties-list ul{
     display: flex;
@@ -238,8 +225,8 @@ ul li {
     cursor: pointer;
 }
 .thum-sticky{
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     border: 0.6px solid #ddd;
     cursor: pointer;
 }
@@ -279,60 +266,37 @@ ul li {
     padding-left: calc(100% - calc(100% - 12px));
     padding-right: calc(100% - calc(100% - 12px));
 }
-#text-Screen, #sticky-Screen{
-    display: none;
-    position: absolute;
+
+#text-Screen{
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
-    /* z-index: 100; */
+    z-index: 100;
 }
 #textPreviewCanvas{
     width: 352px;
-    height: 80px;
+    height: 60px;
     border: 1px solid #ddd;
     position: absolute;
     top: 25px;
-    left: 10px;
-}
-.text-options{
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    left: 10px;
-    top: 180px;
-    width: 352px
-}
-.text-options a{
-    font-family: 'Libre Baskerville', serif;
-    font-size: 18px;
-    /* border: 1px solid #000; */
-    width: 25%;
-    height: 35px;
-    line-height: 35px;
-    text-align: center;
-    cursor: pointer;
-}
-input{
-    display: none;
+    left: 75px;
 }
 #insertTextInput{
-    display: inline-block;
     position: absolute;
     top: 105px;
-    left: 10px;
+    left: 75px;
     width: 290px;
     text-align: center;
-    height: 50px;
+    height: 30px;
     font-size: 20px;
 }
 .setting-content2{
     position: absolute;
-    top: 215px;
-    left: 10px;
+    top: 150px;
+    left: 75px;
     width: 350px;
     text-align: center;
-    height: 280px;
+    height: 200px;
     overflow: scroll;
     border: 1px solid darkslategray;
 }
@@ -342,157 +306,39 @@ input{
 #entryTextBtn{
     position: absolute;
     width: 60px;
-    height: 50px;
+    height: 30px;
     top: 105px;
-    left: 305px;
+    left: 370px;
 }
 #sizeCheck{
     color: transparent;
     /* color: #f00; */
     font-size: 50px;
 }
-.selected-item{
-    border: 5px solid #fff;
-    box-shadow: 0 0 0.375em rgba(0, 0, 0, 0.5);
-}
-.selected{
-    border: 2px solid #fff;
-    box-shadow: 0 0 0.375em rgba(0, 0, 0, 0.5);
-}
-.text-options .selected{
-    border: none;
-    border-bottom: 5px solid #000;
-    box-shadow:none;
-}
 .options{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: absolute;
-    top: 15px;
+    bottom: 15px;
     right: 10px;
     background-color:#000;
-    /* max-height: 300px; */
-    flex-wrap: wrap;
-    width: 120px;
 }
 .option{
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     width: 50px;
     height: 50px;
-    cursor: pointer;
 }
 #bgColor-Screen{
     position: absolute;
-    bottom: -50%;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 50%;
-    transition: all 0.3s ease;
-}
-#textEtc ul{
-    height: 100%;
-    overflow: scroll;
-    font-size: 18px;
-    font-weight: bold;
-}
-#textEtc ul li{
-    margin: 10px 0;
-}
-#textEtc ul li .wrap{
-    width: 80%;
-    height: 50px;
-    background-color: #FFEBD9;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    overflow: hidden;
-}
-#textEtc ul li a{
-    display: block;
-    width: 80%;
-    height: 50px;
-    line-height: 50px;
-    background-color: #FFEBD9;
-    margin-left: auto;
-    margin-right: auto;
-}
-.io-btn-wrap{
-    margin: 30px;
-}
-.io-btn{
-    position: relative;
-    width: 50px;
-    height: 5px;
-    border: 1px solid #888;
-    border-radius: 2px;
-    background-color: #888;
-}
-.io-btn::before{
-    width: 15px;
-    height: 15px;
-    border: 1px solid #888;
-    background-color: #888;
-    border-radius: 10px;
-    content: '';
-    position: absolute;
-    display: inline-block;
-    left: 36px;
-    top: -6px;
-    transition: all 0.3s ease;
-}
-#io-btn-outline:checked ~ .io-btn::before,
-#io-btn-outline:checked ~ .io-btn,
-#io-btn-writingMode:checked ~ .io-btn::before,
-#io-btn-writingMode:checked ~ .io-btn{
-    left: -1px;
-    border: 1px solid #FF945C;
-    background-color: #FF945C;
-}
-.io-btn label{
-    display: block;
-}
-.wrap-screen{
     z-index: 100;
 }
-#previewImage{
-    display: flex;
-    position: absolute;
-    background-color: rgba(0,0,0, 0.5);
-    width: 100%;
-    height: 100%;
-}
-#previewImage img{
-    margin-left: auto;
-    margin-right: auto;
-}
-#space{
-    width: 100%;
-    height: 50%;
-    background-color: rgba(255,255,255,0.2);
-    position: absolute;
-    bottom: -50%;
-    z-index: 999;
-    transition: all 0.3s ease;
-}
-/* checkbox */
-#cBox-bgColor:checked ~ #space {
-    bottom: 50%;
-}
-#cBox-bgColor:checked ~ #bgColor-Screen{
-    bottom: 0;
-}
-#cBox-text:checked ~ #background-canvas,
-#cBox-sticky:checked ~ #background-canvas{
-    filter: blur(10px);
-}
-#cBox-text:checked ~ #text-Screen,
-#cBox-sticky:checked ~ #sticky-Screen{
-    display: block;
-}
-@media screen and (max-width: 680px){
-    body{
-        transform: matrix(1, 0, 0, 1, 0, 0);
+@media screen and (max-width: 1000px){
+    .menu-wrap{
+        display: none;
     }
 }
