--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -1,3 +1,9 @@
+*{
+    box-sizing: border-box;
+}
+a{
+    cursor: pointer;
+}
 body{
     margin: 0;
     padding: 0;
@@ -35,20 +41,16 @@ body{
 #loading-box{
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: transparent;
-    /* display: flex; */
-    display: none;
+    /* display: none; */
     justify-content: center;
     align-items: center;
     overflow: hidden;
     background-color: #000;
     opacity: 0.5;
     z-index: 999;
-}
-*{
-    box-sizing: border-box;
 }
 label{
     cursor: pointer;
@@ -66,6 +68,8 @@ ul li {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    transform-origin: center top;
 }
 .palette{
     width: 500px;
@@ -370,8 +374,7 @@ input{
     position: absolute;
     top: 15px;
     right: 10px;
-    background-color:#000;
-    /* max-height: 300px; */
+    /* background-color:#000; */
     flex-wrap: wrap;
     width: 120px;
 }
@@ -457,13 +460,19 @@ input{
     z-index: 100;
 }
 #previewImage{
-    display: flex;
+    /* display: flex; */
     position: absolute;
-    background-color: rgba(0,0,0, 0.5);
-    width: 100%;
-    height: 100%;
+    top: 0;
+    background-color: rgba(255,255,255, 0.5);
+    width: 100vw;
+    height: 100vh;
+    transform-origin: center top;
 }
 #previewImage img{
+    position: absolute;
+    top: 10%;
+    left: 0;
+    right: 0;
     margin-left: auto;
     margin-right: auto;
 }
@@ -475,6 +484,45 @@ input{
     bottom: -50%;
     z-index: 999;
     transition: all 0.3s ease;
+}
+.confirmScreen{
+    display: none;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+}
+#confirmBack{
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+.popUp{
+    position: absolute;
+    width: 75%;
+    min-width: 300px;
+    max-width: 400px;
+}
+.popUp img{
+    width: 100%;
+    min-width: 300px;
+}
+.confirm-btn{
+    position: absolute;
+    width: 50%;
+    height: 25%;
+    bottom: 0;
+}
+.left{
+    left: 0;
+}
+.right{
+    right: 0;
 }
 /* checkbox */
 #cBox-bgColor:checked ~ #space {
